# SesameGen

./: .gitignore  LICENSE  README.md  build.spec  pyproject.toml
.github/workflows/: linting.yml  tests.yml
images/: logo.icns
sesamegen/: __main__.py  cli.py  generator.py  gui.py  sesamegen.py
tests/: test_cli.py  test_generator.py
