[tool.poetry]
name = "sesamegen"
version = "2.0.0"
description = "A simple efficent password generator"
authors = ["Michael Van Delft <michael@xo.tc>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyqt6 = "^6.7.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.7.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
sesamegen = "sesamegen.gui:start_gui"

[tool.isort]
profile = "black"
src_paths=["sesamegen"]

[tool.ruff.lint]
select = ["E", "F", "I"]