[project]
name = "sesamegen"
version = "2.0.0"
description = "A simple efficent password generator"
author = "Michael Van Delft <michael@xo.tc>"
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "pyqt6>=6.7.1",
    "typer>=0.13.1",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.11.1",
    "ruff>=0.8.0",
]

[project.scripts]
sesamegen = "sesamegen.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # flake8-bandit
    "S",
    # isort
    "I",
    # pep8-naming
    "N"
]
